# xrpl-wasm-std

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  opaque_float_converter.html  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: docs.yml  test.yml
docs/: FIELD_ACCESS.md  FLOAT_OPERATIONS.md  NAMING_CONVENTIONS.md  README.md  api-reference.md  comprehensive-guide.md  getting-started.md
docs/development/: building.md  contributing.md  testing.md
docs/examples/: README.md
e2e-tests/: Cargo.toml  README.md
e2e-tests/decoder_tests/: Cargo.toml  README.md
e2e-tests/decoder_tests/src/: lib.rs
e2e-tests/events/: Cargo.toml
e2e-tests/float_tests/: Cargo.toml  README.md  run_test.js
e2e-tests/float_tests/src/: lib.rs
examples/: Cargo.toml
examples/smart-escrows/notary_macro_example/: Cargo.toml  README.md
examples/smart-escrows/notary_macro_example/fixtures/success/: tx.json
examples/smart-escrows/notary_macro_example/src/: lib.rs
scripts/: README.md  benchmark-gas.sh  build-and-test.sh  build.sh  check-wasm-exports.sh  clippy.sh  coverage.sh  create-example.sh  docs.sh  e2e-tests.sh  embed-wasm.sh  fmt.sh  host-function-audit.sh  pre-commit.sh  prettier.sh  run-all.sh  run-markdown.sh  run-tests.sh  setup.sh
tests/: README.md  deployWasmCode.js  deploy_wasm_code.js  package-lock.json  package.json  runSingleTest.js  run_single_test.js  setupLedger.js  setup_ledger.js  ui.html
tools/: compareGasResults.js  compareHostFunctions.js  compare_gas_results.js  copyRippledFixture.js  gasBenchmark.js  gas_benchmark.js  generateSFields.js  generateTestHostBindings.js
ui/: README.md  accountSync.js  embed-wasm.sh  escrowSync.js  index.html  styles.css
xrpl-address-macro/: Cargo.toml  README.md
xrpl-address-macro/src/: lib.rs
xrpl-wasm-std/: Cargo.toml  README.md
xrpl-wasm-std/src/: lib.rs  sfield.rs  sflags.rs  types.rs
xrpl-wasm-std/src/core/: locator.rs  mod.rs  require.rs  type_codes.rs
xrpl-wasm-std/src/core/current_tx/: escrow_finish.rs  mod.rs  traits.rs
xrpl-wasm-std/src/core/data/: codec.rs
xrpl-wasm-std/src/core/event/: codec_v2.rs  codec_v3.rs
xrpl-wasm-std/src/core/ledger_objects/: account_root.rs  escrow.rs  mod.rs  traits.rs
xrpl-wasm-std/src/core/params/: function.rs  instance.rs  mod.rs  types.rs
xrpl-wasm-std/src/core/submit/: authorize.rs  mod.rs  transfer.rs
xrpl-wasm-std/src/core/types/: account_id.rs  amount.rs  amountv2.rs  asset.rs  blob.rs  contract_data.rs  crypto_condition.rs  currency.rs  hash_128.rs  hash_160.rs  hash_192.rs  hash_256.rs  issue.rs  keylets.rs  mod.rs  mpt_id.rs  nft.rs  opaque_float.rs  transaction_type.rs  uint.rs  uint_128.rs
xrpl-wasm-std/src/core/types/amount/: asset.rs  currency_code.rs  mod.rs  opaque_float.rs  token_amount.rs
xrpl-wasm-std/src/host/: error_codes.rs  host_bindings.rs  host_bindings_for_testing.rs  mod.rs  trace.rs
xrpl-wasm-std/xrpl-address-macro/: Cargo.toml  README.md
xrpl-wasm-std/xrpl-address-macro/src/: lib.rs
xrpl-wasm-stdlib/: Cargo.toml
xrpl-wasm-stdlib/src/: lib.rs  sfield.rs  sflags.rs
xrpl-wasm-stdlib/src/core/: constants.rs  locator.rs  mod.rs  type_codes.rs
xrpl-wasm-stdlib/src/core/current_tx/: contract_call.rs  escrow_finish.rs  mod.rs  traits.rs
xrpl-wasm-stdlib/src/core/data/: codec.rs
xrpl-wasm-stdlib/src/core/event/: codec_v2.rs  codec_v3.rs  mod.rs
xrpl-wasm-stdlib/src/core/ledger_objects/: account_root.rs  array_object.rs  current_escrow.rs  escrow.rs  mod.rs  nft.rs  traits.rs
xrpl-wasm-stdlib/src/core/params/: function.rs  instance.rs  types.rs
xrpl-wasm-stdlib/src/core/types/: account_id.rs  amount.rs  array.rs  blob.rs  contract_data.rs  credentials.rs  crypto_condition.rs  currency.rs  hash_256.rs  issue.rs  keylets.rs  mod.rs  mpt_id.rs  nft.rs  object.rs  opaque_float.rs  public_key.rs  signature.rs  transaction_type.rs  uint.rs  vector_256.rs
xrpl-wasm-stdlib/src/host/: assert.rs  host_bindings.rs  host_bindings_for_testing.rs  mock.rs  mod.rs  trace.rs
xrpl-wasm-stdlib/xrpl-address-macro/: Cargo.toml  README.md
xrpl-wasm-stdlib/xrpl-parameter-macro/: Cargo.toml
xrpl-wasm-stdlib/xrpl-parameter-macro/src/: lib.rs
(+87 files in other folders)
