[package]
name = "xrpl-wasm-std"
version = "0.5.1-devnet5"
edition = "2024"
description = "Standard library for XRPL WebAssembly smart contracts"
license = "ISC"
repository = "https://github.com/ripple/xrpl-wasm-std"
homepage = "https://github.com/ripple/xrpl-wasm-std"
readme = "README.md"
keywords = ["xrpl", "wasm", "smart-contracts", "no-std"]
categories = ["no-std", "embedded", "cryptography::cryptocurrencies"]


[lib]
crate-type = ["lib"]

[dependencies]
xrpl-address-macro = { path = "xrpl-address-macro" }
xrpl-parameter-macro = { path = "xrpl-parameter-macro" }
