[package]
name = "xrpl-wasm-stdlib"
version = "0.7.0"
edition = "2024"
description = "Standard library for XRPL WebAssembly smart contracts"
license = "ISC"
repository = "https://github.com/ripple/xrpl-wasm-stdlib"
homepage = "https://github.com/ripple/xrpl-wasm-stdlib"
readme = "README.md"
keywords = ["xrpl", "wasm", "smart-contracts", "no-std"]
categories = ["no-std", "embedded", "cryptography::cryptocurrencies"]


[lib]
crate-type = ["lib"]

[dependencies]
xrpl-address-macro = { path = "xrpl-address-macro" }
