[package]
name = "float_tests"
version = "0.5.1-devnet5"
edition = "2024"
description = "Test suite for XRPL floating-point operations including arithmetic, comparison, and mathematical functions"
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
xrpl-wasm-std = { path = "../../../xrpl-wasm-std" }
